Fixed side scroll display sizing error, fixed menu alignment order bug, fixed margin with bottom grid and footer

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -58,7 +58,7 @@ h2 {
 #menu li {
     float: right;
     list-style-type: none;
-    margin-right: 30px;
+    margin-right: 25px;
 }
 
 #menu a {
@@ -172,7 +172,7 @@ h2 {
 
 .grid-container>div {
     text-decoration-line: underline;
-    color: #00CC66;
+    color: #F24C00;
     text-align: center;
     padding: 20px 0;
     font-size: 220%;
@@ -236,62 +236,9 @@ footer>p {
 
 }
 
-/* For medium screens sizes from 950px wide and down */
-@media screen and (max-width: 950px) {
-
-    body {
-        width: fit-content;
-    }
-
-    #menu {
-        clear: left;
-        float: right;
-        margin-left: 30px;
-        margin-bottom: 20px;
-        line-height: 25px;
-    }
-
-
-
-    .wrap-content {
-        width: 100%;
-    }
-
-    #hero-image {
-        width: 100%;
-        height: 600px;
-        margin: 0 auto;
-    }
-
-    .container-form {
-        width: 100%;
-    }
-
-    .contact-box {
-        width: inherit;
-    }
-
-    footer {
-        text-align: center;
-    }
-
-    #photo {
-        column-count: 1;
-    }
-}
-
-/* For small screens sizes from 800px wide and down */
-@media screen and (max-width: 800px) {
-
-    #hero-image {
-        width: 100%;
-        height: 600px;
-        margin: 0 auto;
-    }
-}
 
 .bottom-grid {
-    padding: 3em;
+    padding: 5em;
     display: grid;
     grid-gap: 2em;
 
@@ -314,22 +261,6 @@ footer>p {
     margin-left: 15px;
 }
 
-@media (min-width: 550px) {
-    .bottom-grid {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-}
-
-@media (min-width: 750px) {
-    .bottom-grid {
-        grid-template-columns: repeat(3, 1fr);
-    }
-
-    #hero-image {
-        width: 100%;
-    }
-}
 
 /* Image gallery */
 
@@ -385,7 +316,7 @@ footer>p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 40px 20px 0 20px;
+    margin: 20px 20px 0 20px;
 }
 
 .container .heading {
@@ -406,36 +337,6 @@ footer>p {
     font-weight: 100;
 }
 
-
-
-@media only screen and (max-width: 769px) {
-
-    .holdingcontainer {
-        flex-direction: column;
-    }
-
-    .grid-container div {
-        width: 100%;
-        clear: both;
-        height: 150px;
-        padding: 0;
-        margin: auto;
-    }
-
-}
-
-@media only screen and (max-width: 643px) {
-
-
-    .container .heading {
-        width: 100%;
-    }
-
-    .container .heading h3 {
-        font-size: 3em;
-
-    }
-}
 
 /* CONTACT - FORM, credit to https://github.com/sefyudem/Contact-Us-Form/blob/master/style.css*/
 
@@ -554,6 +455,130 @@ textarea {
 .field:focus {
     border: 2px solid rgba(30, 85, 250, 0.47);
     background-color: #fff;
+}
+
+/* MEDIA SCREEN SIZES */
+/* For large to medium screens sizes from 1200px wide and down */
+@media screen and (max-width: 1200px) {
+    #hero-image {
+        width: 65%;
+        height: 600px;
+        margin: 0 auto;
+    }
+
+
+    .grid-container div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+        margin: auto;
+    }
+
+    hr {
+        display: none;
+    }
+
+}
+
+/* For medium screens sizes from 950px wide and down */
+@media screen and (max-width: 950px) {
+
+    body {
+        width: fit-content;
+        block-size: fit-content;
+    }
+
+    #menu {
+        clear: left;
+        float: right;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+
+
+
+    .wrap-content {
+        width: 100%;
+    }
+
+    #hero-image {
+        width: 100%;
+        height: 600px;
+        margin: 0 auto;
+    }
+
+    .container-form {
+        width: 100%;
+    }
+
+    .contact-box {
+        width: inherit;
+    }
+
+    footer {
+        text-align: center;
+    }
+
+    #photo {
+        column-count: 1;
+    }
+}
+
+/* For small screens sizes from 800px wide and down */
+@media screen and (max-width: 800px) {
+
+    #hero-image {
+        width: 80%;
+        height: 600px;
+        margin: 0 auto;
+    }
+}
+
+@media only screen and (max-width: 769px) {
+
+    .holdingcontainer {
+        flex-direction: column;
+    }
+
+    .grid-container div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+        margin: auto;
+    }
+
+}
+
+@media only screen and (max-width: 643px) {
+
+
+    .container .heading {
+        width: 100%;
+    }
+
+    .container .heading h3 {
+        font-size: 3em;
+
+    }
+}
+@media (min-width: 550px) {
+    .bottom-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+}
+
+@media (min-width: 750px) {
+    .bottom-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    #hero-image {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 880px) {
